<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/cor_fundo">

    <View
        android:id="@+id/view"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/forma_arredondada"
        android:backgroundTint="@color/cor_area_arredondada"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tres_pontos"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="3.5dp"
        android:textColor="@color/cor_titulo"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view">

    </TextView>

    <View
        android:id="@+id/view2"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/forma_arredondada"
        android:backgroundTint="@color/cor_area_arredondada"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view">

    </View>

    <ImageView
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:src="@drawable/camera"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:tint="@color/cor_camera">

    </ImageView>

    <View
        android:id="@+id/view3"
        android:layout_width="33dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/forma_arredondada"
        android:backgroundTint="@color/cor_verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <ImageView
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:src="@drawable/mais"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:tint="@color/cor_mais">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/chats"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/cor_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

    </TextView>

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="35dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="24dp"
        android:background="@drawable/forma_oval"
        android:backgroundTint="@color/cor_area_arredondada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </View>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/lupa"

        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@color/cor_lupa">

    </ImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_pesquisar"
        android:textColor="@color/cor_texto_pesquisar"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/view4">

    </TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/arquivado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:tint="@color/cor_arquivado">

    </ImageView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/arquivado"
        android:textColor="@color/cor_titulo"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/view4">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/numero_arquivado"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/cor_titulo"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/textView3">

    </TextView>

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"

        android:layout_marginTop="22dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/forma_oval"
        android:backgroundTint="@color/cor_separacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

    </View>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"

        android:background="@drawable/circulo_fotos"
        android:clipToOutline="true"
        android:scaleType="centerCrop"

        android:src="@drawable/bill_gates"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/view5">

    </ImageView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/nome_contato_um"
        android:textColor="@color/cor_titulo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/view5">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultima_msg_contato_um"
        android:textColor="@color/cor_ultima_mensagem"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </TextView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/horario_msg_um"
        android:textColor="@color/cor_verde"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4">

    </TextView>

    <View
        android:id="@+id/view6"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/forma_oval"
        android:backgroundTint="@color/cor_verde"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacoes_msg_um"
        android:textColor="@color/cor_notif"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6">

    </TextView>

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/forma_oval"
        android:backgroundTint="@color/cor_separacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

    </View>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:background="@drawable/circulo_fotos"
        android:layout_marginTop="15dp"

        android:backgroundTint="@color/white"
        android:clipToOutline="true"
        android:scaleType="centerCrop"

        android:src="@drawable/pinguim_linux"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/view7">

    </ImageView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/nome_contato_dois"
        android:textColor="@color/cor_titulo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/view7">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultima_msg_contato_dois"
        android:textColor="@color/cor_ultima_mensagem"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario_msg_dois"
        android:textColor="@color/cor_titulo"
        android:textSize="15sp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5">

    </TextView>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forma_oval"
        android:backgroundTint="@color/cor_separacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

    </View>

</androidx.constraintlayout.widget.ConstraintLayout>